qtquickcontrols2-opensource-src (5.14.2+dfsg-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.14.2.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 03 May 2020 13:41:00 +0300

qtquickcontrols2-opensource-src (5.14.1+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.14.1.
  * Update symbols files from the current build log.
  * Update to debhelper compat level 12.
    - Switch to using debhelper-compat as a build dependency.
  * Bump Standards-Version to 4.5.0, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 02 Mar 2020 16:48:29 +0300

qtquickcontrols2-opensource-src (5.12.5+dfsg-2) unstable; urgency=medium

  * Update debian/libqt5quicktemplates2-5.symbols from buildds’ logs.
  * Bump Standards-Version to 4.4.1, no changes needed.
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 20 Oct 2019 23:49:39 +0300

qtquickcontrols2-opensource-src (5.12.5+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.12.5.
  * Update Homepage URL.
  * Update debian/libqt5quicktemplates2-5.symbols from the current build log.
  * Add Build-Depends-Package field to the symbols files.
  * Bump Standards-Version to 4.4.0, no changes needed.
  * Build-depend on qtgraphicaleffects5-doc-html for linking docs.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 23 Sep 2019 13:41:16 +0300

qtquickcontrols2-opensource-src (5.12.4+dfsg-1) experimental; urgency=medium

  [ Scarlett Moore ]
  * Update packaging to use doc-base as per policy 9.10.

  [ Dmitry Shachnev ]
  * Update debian/libqt5quicktemplates2-5.symbols from buildds’ logs.
  * New upstream release.
  * Bump Qt build-dependencies to 5.12.4.
  * Simplify debian/rules by using a debian/not-installed file.
  * Add support for nocheck build profile.
  * Add support for nodoc build profile.