@@ -3,6 +3,7 @@ qtquickcontrols2-opensource-src (5.14.2+dfsg-1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * New upstream release.
   * Bump Qt build-dependencies to 5.14.2.
+  * Remove build paths from .prl files for reproducibility.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 03 May 2020 13:41:00 +0300
 
